
2011-06-28  Tom Hacohen (TAsn)

	* Polygon: Implemented "is_inside".

2011-07-05  Hyoyoung Chang

	* Fix bug where event causes event in callback on same object, but
        with same event counter, so also filter out same event types.

2011-07-06  Carsten Haitzler (The Rasterman)

	* Fix bug in grab counting on object hide while events are frozen

2011-07-07  Cedric Bail

	* Fix infite loop when reinserting object during recalc stage.

2011-07-27  Tom Hacohen (TAsn)

	* Textblock: Closing tags formats is now well-defined for complex
	  formats.
	  For example: <font=Sans font_size=23 color=#FFF> should now be
	  closed with </font> (or, like before, with the generic poper).
	* Textblock: Add support for out-of-order tag openers/closers.
	  Markup sequences like <b><i></b></i> are now legal and work as
	  expeceted.

2011-07-28  Tom Hacohen (TAsn)

	* Textblock: Added support for quoting format parameters.
	  Formats like: <font='Sans' color='#FFF'> are now legal.
	* Textblock: Added font_weight and font_style formats.
	  These format allow overriding the font style set using:
	  font=':style=Bold'.

2011-07-31  Tom Hacohen (TAsn)

	* Textblock: Added font_width.
	  This allows overriding the font width set using:
	  font=':style=Condensed'

2011-08-01  Tom Hacohen (TAsn)

	* Textblock: Added lang to markup to set the lang of the text.

2011-08-09  Tom Hacohen (TAsn)

	* Textblock: Added evas_textblock_cursor_range_formats_get which
	returns the formats inside a range.
	* Textblock: Added evas_textblock_cursor_visible_range_get which
	updates the cursors to the ends of the area currently visible on
	screen.

2011-08-17  Tom Hacohen (TAsn)

	* Callbacks: Added priority support to callbacks.

2011-08-23  Cedric Bail

	* Fix evas_object_image_data_convert.
	* Add YUV 601 input format to evas_object_image_data_convert.

2011-08-29  Cedric Bail

	* Add colorspaces NV12 and MT12 (64 * 32 macro block tiled
	format, see Linux videodev documentation for more information).